--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>academy</groupId>
-    <artifactId>milky_way</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>academy</groupId>
+  <artifactId>milky_way</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
+  <name>milky_way</name>
+  <url>http://maven.apache.org</url>
 
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>17</maven.compiler.release>
-        <slf4j.version>1.7.36</slf4j.version>
-        <jackson.version>2.13.3</jackson.version>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>17</maven.compiler.release>
+    <slf4j.version>1.7.36</slf4j.version>
+    <jackson.version>2.13.3</jackson.version>
+  </properties>
 
     <dependencyManagement>
         <dependencies>
