--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,16 @@
   <groupId>academy</groupId>
   <artifactId>milky_way</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>milky_way</name>
   <url>http://maven.apache.org</url>
+    <modules>
+        <module>course-info-repository</module>
+        <module>course-info-cli</module>
+    </modules>
 
-  <properties>
+    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
     <slf4j.version>1.7.36</slf4j.version>
