--- a/course-info-cli/pom.xml
+++ b/course-info-cli/pom.xml
@@ -20,6 +20,11 @@
     <!--<dependencyManagement>-->
     <dependencies>
         <dependency>
+            <groupId>academy</groupId>
+            <artifactId>course-info-repository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
