--- a/course-info-repository/pom.xml
+++ b/course-info-repository/pom.xml
@@ -10,6 +10,17 @@
     </parent>
 
     <artifactId>course-info-repository</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
