--- a/course-info-server/pom.xml
+++ b/course-info-server/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>course-info-server</artifactId>
 
     <properties>
-        <slf4j.version>1.7.36</slf4j.version>
         <jackson.version>2.13.3</jackson.version>
         <jersey.version>3.0.4</jersey.version>
     </properties>
@@ -33,6 +32,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
          <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
