--- a/course-info-repository/pom.xml
+++ b/course-info-repository/pom.xml
@@ -8,7 +8,9 @@
         <artifactId>milky_way</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
+    <properties>
+        <jersey.version>3.0.4</jersey.version>
+    </properties>
     <artifactId>course-info-repository</artifactId>
     <dependencies>
         <dependency>
@@ -19,14 +21,20 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.8.2</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+        <!-- uncomment this to get JSON support: -->
+       <!-- <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-binding</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>-->
     </dependencies>
 
 </project>
