--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <jackson.version>2.13.3</jackson.version>
   </properties>
 
-    <!--<dependencyManagement>-->
+   <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -54,7 +54,7 @@
                 <version>${jackson.version}</version>
             </dependency>
         </dependencies>
-    <!--</dependencyManagement>-->
+    </dependencyManagement>
 
     <build>
         <plugins>
