--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>course-info-repository</module>
         <module>course-info-cli</module>
         <module>course-info-server</module>
+        <module>rest-service</module>
+        <module>quote-rabbit-library</module>
     </modules>
 
     <properties>
